# FaceKit

./: .gitignore  LICENSE  README.md  custom_mapping.json  pyproject.toml
scripts/: download_mondo.sh  make_figures.py
src/facekit/: __init__.py  api.py  cli.py  constants.py
src/facekit/commands/: average_face.py  extract_features.py  extract_features_custom.py  extract_landmarks.py  resolve_diseases.py
src/facekit/core/geometric/: __init__.py  batch.py  custom_batch.py  defaults.py  disease_resolver.py  disease_specific.py  extractor.py  feature_selector.py
src/facekit/core/morph/: __init__.py  aligner.py  averager.py  blender.py  landmarks.py  locator.py  warper.py
tests/: parity_check_extract_features.py  test_api_plugin_registry.py  test_extract_features_custom.py  test_user_mapping.py
